<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        tools:context=".modules.signUp.SignUp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_13sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/signUpHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:letterSpacing="0.2"
            android:text="@string/property"
            android:textAllCaps="true"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/back" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintTop_toBottomOf="@+id/back">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/signup"
                    android:textColor="@color/buttonColor"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/fill_your_details_to_continue"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_17sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />

                <EditText
                    android:id="@+id/singUpFullName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/ic_avtar"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/full_name"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:paddingStart="@dimen/_10sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />

                <EditText
                    android:id="@+id/singUpEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/your_email"
                    android:paddingStart="@dimen/_10sdp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />

                <EditText
                    android:id="@+id/signUpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/set_password"
                    android:paddingStart="@dimen/_10sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/confirm_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />

                <EditText
                    android:id="@+id/signUpConfirmPswrd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:background="@drawable/edittext_bg"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:textSize="@dimen/_12sdp"
                    android:fontFamily="@font/inter_regular"
                    android:hint="@string/confirm_your_password"
                    android:paddingStart="@dimen/_10sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:background="@drawable/checkbox_selector"
                        android:textOff=""
                        android:textOn="" />


                    <TextView
                        android:id="@+id/signUpTermsAndCondition"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/terms_and_conditon"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/back" />
                    <TextView
                        android:id="@+id/signUpPrivacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/back" />

                </LinearLayout>

                <TextView
                    android:id="@+id/btnRegister"
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginBottom="@dimen/_30ssp"
                    android:background="@drawable/button_bg_dark_pink"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/register"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintBottom_toTopOf="@+id/continueAsGuest"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <TextView
                    android:id="@+id/signUpAlreadyHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/back" />


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

